convert css to less

--- a/uploader/rebuild page/style.less
+++ b/uploader/rebuild page/style.less
@@ -30,18 +30,17 @@ body {
     font-size: 14px;
     letter-spacing: -0.3px;
 	position: absolute;
-}
-.info ul {
-	font-size: 12px;
-	padding: 0;
-	padding-left: 16px;
-	margin-top: 3px;
-	font-weight: lighter;
-}
-.info ul li {
-	padding-left: 0;
-	color: rgba(0,0,0, .5);
-
+	ul {
+		font-size: 12px;
+		padding: 0;
+		padding-left: 16px;
+		margin-top: 3px;
+		font-weight: lighter;
+		li {
+			padding-left: 0;
+			color: rgba(0,0,0, .5);
+		}
+	}
 }
 .li-text {
 	position: relative;
@@ -62,12 +61,12 @@ a {
 	font-size: 21px;
     color: rgba(0,0,0,0.3);
     letter-spacing: -0.5px;
-}
-.initialsignagecontainer .heading {
-	font-size: 21px;
-    font-weight: 900;
-    color: rgba(0,0,0,0.5);
-    letter-spacing: -0.5px;
+    .heading {
+		font-size: 21px;
+	    font-weight: 900;
+	    color: rgba(0,0,0,0.5);
+	    letter-spacing: -0.5px;
+    }
 }
 .cardscontainer {
 
@@ -88,9 +87,9 @@ a {
 	height: 112px;
 
 	padding-left: 21px;
-	padding-top: 16px;			
-}
-.card img {
-	width: 45px;
-	opacity: .6;
+	padding-top: 16px;
+	img {
+		width: 45px;
+		opacity: .6;
+	}
 }
